--- a/heading.html
+++ b/heading.html
@@ -3,10 +3,16 @@
 <html>
   <head>
     <title>
-      My Home Page
+      Headings Demo
     </title>
     
     <body>
-      <p>Welcome to my website!</p>
+      <!--Headings demo-->
+      <h1>This is a level 1 heading</h1>
+      <h2>This is a level 2 heading</h1>
+      <h3>This is a level 3 heading</h1>
+      <h4>This is a level 4 heading</h1>
+      <h5>This is a level 5 heading</h1>
+      <h6>This is a level 6 heading</h1>
     <body>
 </html>
