--- a/heading.html
+++ b/heading.html
@@ -5,7 +5,7 @@
     <title>
       Headings Demo
     </title>
-    
+  <head>
     <body>
       <!--Headings demo-->
       <h1>This is a level 1 heading</h1>
