--- a/Ordered List.html
+++ b/Ordered List.html
@@ -5,6 +5,46 @@
     </title>
   <head>
     <body>
-      <p>Welcome to my website!</p>
+      <p>This is a demo of a Numbered List</p>
+      <ol>
+        <li>Thing</li>
+          <ol>
+              <li>Sub Thing</li>
+              <li>Another Sub Thing</li>
+          </ol>
+        <li>Another Thing</li>
+          <ol>
+              <li>This other sub thing</li>
+              <li>And Another One</li>
+          </ol>
+    </ol>
+
+    <h1>This is a demo of Numbered List with Letters</h1>
+    <ol type = "A">
+      <li>This other sub thing</li>
+        <ol type = "a">
+            <li>Sub-Item</li>
+            <li>Sub-Item</li>
+        </ol>
+      <li>And Another One</li>
+    </ol>
+
+    <h1>This is a demo of Numbered List with Roman Numerals</h1>
+    <ol type = "I">
+      <li>This other sub thing</li>
+        <ol type = "i">
+            <li>Sub-Item</li>
+            <li>Sub-Item</li>
+        </ol>
+      <li>And Another One</li>
+    </ol>
+    
+    <h1>This is a demo of Numbered List that starts at  a value other than 1</h1>
+    <ol type = "1" start = "8">
+      <li>This other sub thing</li>
+      <li>Sub-Item</li>
+      <li>Sub-Item</li>
+      <li>And Another One</li>
+    </ol>
     <body>
 </html>
