--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="unorderedlist.html">Unordered List Demo</a></li>
             <li><a href="Ordered List.html">Ordered List Demo</a></li>
             <li><a href="tabledemo1.html">Table Demo 1</a></li>
-            <li><a href="Table Demo 2.html">Table Demo 2</a></li>
+            <li><a href="Table Demo 2.html">Table Demo 2 - Pets</a></li>
           </ul>
       </nav>
       <p>Welcome to my website!</p>
