--- a/heading.html
+++ b/heading.html
@@ -14,5 +14,15 @@
       <h4>This is a level 4 heading</h1>
       <h5>This is a level 5 heading</h1>
       <h6>This is a level 6 heading</h1>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="heading.html">Heading Demo</a></li>
+          <li><a href="textdemo.html">Text Demo</a></li>
+          <li><a href="unorderedlist.html">Unordered List Demo</a></li>
+          <li><a href="Ordered List.html">Ordered List Demo</a></li>
+          <li><a href="tabledemo1.html">Table Demo 1</a></li>
+          <li><a href="Table Demo 2.html">Table Demo 2 - Pets</a></li>
+        </ul>
     <body>
+      
 </html>
