--- a/textdemo.html
+++ b/textdemo.html
@@ -31,5 +31,14 @@
                 <q>This is Quoted text</q>
             </p>
         </center>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="heading.html">Heading Demo</a></li>
+          <li><a href="textdemo.html">Text Demo</a></li>
+          <li><a href="unorderedlist.html">Unordered List Demo</a></li>
+          <li><a href="Ordered List.html">Ordered List Demo</a></li>
+          <li><a href="tabledemo1.html">Table Demo 1</a></li>
+          <li><a href="Table Demo 2.html">Table Demo 2 - Pets</a></li>
+        </ul>
     <body>
 </html>
