--- a/cssdemo.html
+++ b/cssdemo.html
@@ -29,6 +29,6 @@
       <h1 class = "alignCenter">CENTER</h1>
       <h1 class = "alignRight">RIGHT</h1>
       <h1 class = "alignCenter white blackBackground">White Text on Black Background</h1>
-    </body class = "body">
+    </body>
 
 </html>
