--- a/travel.html
+++ b/travel.html
@@ -1,21 +1,22 @@
+body{
+  background-color: aquamarine;
+  background-size: 100% 100%;
+}
 <html>
   <head>
     <title>
       Dream Vacation Page
     </title>
-
     <!--Internal CSS
     <style>
       body{
-          background-color: aquamarine;
-          background-size: 100% 100%;
+        background-color: aquamarine;
+        background-size: 100% 100%;
       }
     </style>
     -->
-
     <!--External CSS-->
     <link rel="stylesheet" type = "text/css" href="travelSyle.css"
-
   </head>
 
     <body>
@@ -34,7 +35,39 @@
       </nav>
       
       <center>
-          <img src = "media/Ireland 1.jpeg" title = "Ireland Image #1" atl = "Ireland Image #1">
+          <h1>Ashley's Dream Vacation- Ireland</h1>
+          <h3>Click Each Image to View the Full-Size Version</h3>
+          <h3>Click the Video for the Do's/Don'ts of Ireland</h3>
+
+          <a href="Media/Ireland 1.jpeg">
+          <img src = "Media/Ireland 1.jpeg" title = "Ireland Image #1" atl = "Ireland Image #1" width = "400"
+          height="200">
+          </a>
+          <a href="Media/Ireland 2.jpeg">
+          <img src = "Media/Ireland 2.jpeg" title = "Ireland Image #2" atl = "Ireland Image #2" width = "400"
+          height="200">
+          </a>
+          <a href="Media/Ireland 3.jpeg">
+          <img src = "Media/Ireland 3.jpeg" title = "Ireland Image #13 atl = "Ireland Image #3" width = "400"
+          height="200">
+          </a>
+          <br>
+          <iframe width="1208" height="315" src="https://www.youtube.com/embed/gXrrwgaVZOo" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          <a href="Media/Ireland 3.jpeg">
+          <img src = "Media/Ireland 3.jpeg" title = "Ireland Image #13 atl = "Ireland Image #3" width = "400"
+          height="200">
+          </a>
+          <a href="Media/Ireland 2.jpeg">
+          <img src = "Media/Ireland 2.jpeg" title = "Ireland Image #2" atl = "Ireland Image #2" width = "400"
+          height="200">
+          <a href="Media/Ireland 1.jpeg">
+          <img src = "Media/Ireland 1.jpeg" title = "Ireland Image #1" atl = "Ireland Image #1" width = "400"
+          height="200">
+          </a>
+              
       </center>
     </body>
 
