--- a/unorderedlist.html
+++ b/unorderedlist.html
@@ -38,7 +38,9 @@
           <li><a href="unorderedlist.html">Unordered List Demo</a></li>
           <li><a href="Ordered List.html">Ordered List Demo</a></li>
           <li><a href="tabledemo1.html">Table Demo 1</a></li>
-          <li><a href="Table Demo 2.html">Table Demo 2 - Pets</a></li>
+          <li><a href="tabledemo2.html">Table Demo 2</a></li>
+          <li><a href="cssdemo.html">CSS Demo</a></li>
+          <li><a href="travel.html">Dream Vacation Page</a></li>
         </ul>
     <body>
 </html>
