--- a/travel.html
+++ b/travel.html
@@ -1,22 +1,18 @@
-body{
-  background-color: aquamarine;
-  background-size: 100% 100%;
-}
 <html>
   <head>
     <title>
       Dream Vacation Page
     </title>
-    <!--Internal CSS
+    <!-- Internal CSS
     <style>
-      body{
-        background-color: aquamarine;
-        background-size: 100% 100%;
-      }
+        body{
+            background-color: aquamarine;
+            background-size: 100% 100%;
+        }
     </style>
     -->
     <!--External CSS-->
-    <link rel="stylesheet" type = "text/css" href="travelSyle.css"
+    <link rel="stylesheet" type="text/css" href="travelStyle.css">
   </head>
 
     <body>
