--- a/travel.html
+++ b/travel.html
@@ -20,19 +20,38 @@
   </head>
 
     <body>
-      <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="heading.html">Heading Demo</a></li>
-            <li><a href="textdemo.html">Text Demo</a></li>
-            <li><a href="unorderedlist.html">Unordered List Demo</a></li>
-            <li><a href="Ordered List.html">Ordered List Demo</a></li>
-            <li><a href="tabledemo1.html">Table Demo 1</a></li>
-            <li><a href="tabledemo2.html">Table Demo 2</a></li>
-            <li><a href="cssdemo.html">CSS Demo</a></li>
-            <li><a href="travel.html">Dream Vacation Page</a></li>
-          </ul>
-      </nav>
+      <ul class = "nav nav-pills nav-fill">
+        <li class = "nav-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class = "nav-item">
+          <a href="heading.html">Heading Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="textdemo.html">Text Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="unorderedlist.html">Unordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="Ordered List.html">Ordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo1.html">Table Demo 1</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo2.html">Table Demo 2</a>
+        </li>
+        <li class = "nav-item">
+          <a href="cssdemo.html">CSS Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a class="nav-link active" aria-current="page" href="travel.html">Dream Vacation Page</a>
+        </li>
+        <li class = "nav-item">
+          <a href="bootstrap Demo.html">Bootstrap Demo</a>
+        </li>
+      </ul>
       
       <center>
           <h1>Ashley's Dream Vacation- Ireland</h1>
