--- a/Ordered List.html
+++ b/Ordered List.html
@@ -7,7 +7,7 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
-  <head>
+  </head>
     <body>
       <p>This is a demo of a Numbered List</p>
       <ol>
@@ -50,16 +50,37 @@
       <li>Sub-Item</li>
       <li>And Another One</li>
     </ol>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-            <li><a href="heading.html">Heading Demo</a></li>
-            <li><a href="textdemo.html">Text Demo</a></li>
-            <li><a href="unorderedlist.html">Unordered List Demo</a></li>
-            <li><a href="Ordered List.html">Ordered List Demo</a></li>
-            <li><a href="tabledemo1.html">Table Demo 1</a></li>
-            <li><a href="tabledemo2.html">Table Demo 2</a></li>
-            <li><a href="cssdemo.html">CSS Demo</a></li>
-            <li><a href="travel.html">Dream Vacation Page</a></li>
+    <ul class = "nav nav-pills nav-fill">
+      <li class = "nav-item">
+        <a href="index.html">Home</a>
+      </li>
+      <li class = "nav-item">
+        <a href="heading.html">Heading Demo</a>
+      </li>
+      <li class = "nav-item">
+        <a href="textdemo.html">Text Demo</a>
+      </li>
+      <li class = "nav-item">
+        <a href="unorderedlist.html">Unordered List Demo</a>
+      </li>
+      <li class = "nav-item">
+        <a class="nav-link active" aria-current="page" href="Ordered List.html">Ordered List Demo</a>
+      </li>
+      <li class = "nav-item">
+        <a href="tabledemo1.html">Table Demo 1</a>
+      </li>
+      <li class = "nav-item">
+        <a href="tabledemo2.html">Table Demo 2</a>
+      </li>
+      <li class = "nav-item">
+        <a href="cssdemo.html">CSS Demo</a>
+      </li>
+      <li class = "nav-item">
+        <a href="travel.html">Dream Vacation Page</a>
+      </li>
+      <li class = "nav-item">
+        <a href="bootstrap Demo.html">Bootstrap Demo</a>
+      </li>
     </ul>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>        
