--- a/bootstrapdemo.html
+++ b/bootstrapdemo.html
@@ -10,10 +10,10 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
 
-  <head>
+  </head>
     <body>
       
-          <ul class = "nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill">
             <li class = "nav-item">
               <a href="index.html">Home</a>
             </li>
