--- a/cssdemo.html
+++ b/cssdemo.html
@@ -13,21 +13,40 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
-  <head>
+  </head>
     <body>
-      <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="heading.html">Heading Demo</a></li>
-            <li><a href="textdemo.html">Text Demo</a></li>
-            <li><a href="unorderedlist.html">Unordered List Demo</a></li>
-            <li><a href="Ordered List.html">Ordered List Demo</a></li>
-            <li><a href="tabledemo1.html">Table Demo 1</a></li>
-            <li><a href="tabledemo2.html">Table Demo 2</a></li>
-            <li><a href="cssdemo.html">CSS Demo</a></li>
-            <li><a href="travel.html">Dream Vacation Page</a></li>
-          </ul>
-      </nav>
+      <ul class = "nav nav-pills nav-fill">
+        <li class = "nav-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class = "nav-item">
+          <a href="heading.html">Heading Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="textdemo.html">Text Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="unorderedlist.html">Unordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="Ordered List.html">Ordered List Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo1.html">Table Demo 1</a>
+        </li>
+        <li class = "nav-item">
+          <a href="tabledemo2.html">Table Demo 2</a>
+        </li>
+        <li class = "nav-item">
+          <a class="nav-link active" aria-current="page" href="cssdemo.html">CSS Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="travel.html">Dream Vacation Page</a>
+        </li>
+        <li class = "nav-item">
+          <a href="bootstrap Demo.html">Bootstrap Demo</a>
+        </li>
+      </ul>
       <h1 class = "blue">MAKE ME BLUE</h1>
       <h1 class = "purple">MAKE ME PURPLE</h1>
       <h1 class = "red">MAKE ME RED</h1>
