--- a/heading.html
+++ b/heading.html
@@ -9,7 +9,7 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
-  <head>
+  </head>
     <body>
       <!--Headings demo-->
       <h1>This is a level 1 heading</h1>
@@ -18,16 +18,37 @@
       <h4>This is a level 4 heading</h1>
       <h5>This is a level 5 heading</h1>
       <h6>This is a level 6 heading</h1>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="heading.html">Heading Demo</a></li>
-          <li><a href="textdemo.html">Text Demo</a></li>
-          <li><a href="unorderedlist.html">Unordered List Demo</a></li>
-          <li><a href="Ordered List.html">Ordered List Demo</a></li>
-          <li><a href="tabledemo1.html">Table Demo 1</a></li>
-          <li><a href="tabledemo2.html">Table Demo 2</a></li>
-          <li><a href="cssdemo.html">CSS Demo</a></li>
-          <li><a href="travel.html">Dream Vacation Page</a></li>
+        <ul class = "nav nav-pills nav-fill">
+          <li class = "nav-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class = "nav-item">
+            <a class="nav-link active" aria-current="page" href="heading.html">Heading Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="textdemo.html">Text Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="unorderedlist.html">Unordered List Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="Ordered List.html">Ordered List Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="tabledemo1.html">Table Demo 1</a>
+          </li>
+          <li class = "nav-item">
+            <a href="tabledemo2.html">Table Demo 2</a>
+          </li>
+          <li class = "nav-item">
+            <a href="cssdemo.html">CSS Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="travel.html">Dream Vacation Page</a>
+          </li>
+          <li class = "nav-item">
+            <a href="bootstrap Demo.html">Bootstrap Demo</a>
+          </li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>        
@@ -36,6 +57,6 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <body>
+    </body>
       
 </html>
