--- a/bootstrapdemo.html
+++ b/bootstrapdemo.html
@@ -42,7 +42,7 @@
               <a href="travel.html">Dream Vacation Page</a>
             </li>
             <li class = "nav-item">
-              <a class="nav-link active" aria-current="page" href="bootstrap Demo.html">Bootstrap Demo</a>
+              <a class="nav-link active" aria-current="page" href="bootstrapdemo.html">Bootstrap Demo</a>
             </li>
           </ul>
       
