--- a/heading.html
+++ b/heading.html
@@ -47,7 +47,7 @@
             <a href="travel.html">Dream Vacation Page</a>
           </li>
           <li class = "nav-item">
-            <a href="bootstrap Demo.html">Bootstrap Demo</a>
+            <a href="bootstrapdemo.html">Bootstrap Demo</a>
           </li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
