--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="travel.html">Dream Vacation Page</a>
           </li>
           <li class = "nav-item">
-            <a href="bootstrap Demo.html">Bootstrap Demo</a>
+            <a href="bootstrapdemo.html">Bootstrap Demo</a>
           </li>
         </ul>
       
