--- a/travel.html
+++ b/travel.html
@@ -49,7 +49,7 @@
           <a class="nav-link active" aria-current="page" href="travel.html">Dream Vacation Page</a>
         </li>
         <li class = "nav-item">
-          <a href="bootstrap Demo.html">Bootstrap Demo</a>
+          <a href="bootstrapdemo.html">Bootstrap Demo</a>
         </li>
       </ul>
       
