--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -7,9 +7,11 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+
+    <link rel = "stylesheet" href = "boxstyle.css">
   </head>
     <body>
-  
+      <!--primary nav-->
         <ul class = "nav nav-pills nav-fill">
           <li class = "nav-item">
             <a href="index.html">Home</a>
@@ -45,8 +47,38 @@
           </li>
           </li>
         </ul>
-      
-      <p>Welcome to my website!</p>
+
+        <!--seconday nav (small screen)-->
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="index.html">Home</a>
+            <a class="dropdown-item" href="heading.html">Heading Demo</a>
+            <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+            <a class="dropdown-item" href="unorderedlist.html">Unordered List Demo</a>
+            <a class="dropdown-item" href="Ordered List.html">Ordered List Demo</a>
+            <a class="dropdown-item" href="tabledemo1.html">Table Demo 1</a>
+            <a class="dropdown-item" href="tabledemo2.html">Table Demo 2</a>
+            <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+            <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+            <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+            <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+          </div>
+        </div>
+
+        <center>
+          <h2>Media Query Demo</h2>
+          <h3> Change the width ofthe page to see changes in the page</h3>
+        </center>
+
+        <div class="box greenbox"></div>
+        <div class="box bluebox"></div>
+        <div class="box violetbox"></div>
+        <div class="box redbox"></div>
+        <div class="box yellowbox"></div>
+
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>        
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
@@ -54,6 +86,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    
     </body>
 
 </html>
