--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -9,10 +9,11 @@
     crossorigin="anonymous">
 
     <link rel = "stylesheet" href = "boxstyle.css">
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
       <!--primary nav-->
-        <ul class = "nav nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill primaryNav">
           <li class = "nav-item">
             <a href="index.html">Home</a>
           </li>
@@ -49,8 +50,8 @@
         </ul>
 
         <!--seconday nav (small screen)-->
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="dropdown show secondayNav">
+          <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown button
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
