--- a/heading.html
+++ b/heading.html
@@ -9,6 +9,7 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
       <!--Headings demo-->
@@ -18,7 +19,7 @@
       <h4>This is a level 4 heading</h1>
       <h5>This is a level 5 heading</h1>
       <h6>This is a level 6 heading</h1>
-        <ul class = "nav nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill primaryNav">
           <li class = "nav-item">
             <a href="index.html">Home</a>
           </li>
@@ -48,6 +49,9 @@
           </li>
           <li class = "nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
           </li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
