--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -65,7 +65,7 @@
             <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
             <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
             <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
-            <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+            <a class="dropdown-item active" href="mediaQueryDemo.html">Media Query Demo</a>
           </div>
         </div>
 
