--- a/travel.html
+++ b/travel.html
@@ -12,15 +12,17 @@
     </style>
     -->
     <!--External CSS-->
-    <link rel="stylesheet" type="text/css" href="travelStyle.css">
-    <link rel="stylesheet"         
+    <link rel="stylesheet" href="travelStyle.css">      
+    <link rel="stylesheet"  
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
 
     <body>
-      <ul class = "nav nav-pills nav-fill">
+      <ul class = "nav nav-pills nav-fill primaryNav">
         <li class = "nav-item">
           <a href="index.html">Home</a>
         </li>
@@ -50,6 +52,9 @@
         </li>
         <li class = "nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
       
