--- a/unorderedlist.html
+++ b/unorderedlist.html
@@ -7,6 +7,7 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
       <h1>This is a demo of a Bulleted List</h1>
@@ -35,7 +36,7 @@
             <li>And Another Square Item</li>
 
         </ul>
-        <ul class = "nav nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill primaryNav">
           <li class = "nav-item">
             <a href="index.html">Home</a>
           </li>
@@ -65,6 +66,9 @@
           </li>
           <li class = "nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
           </li>
         </ul>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
