--- a/bootstrapdemo.html
+++ b/bootstrapdemo.html
@@ -9,11 +9,11 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
-
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
       
-        <ul class = "nav nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill primaryNav">
             <li class = "nav-item">
               <a href="index.html">Home</a>
             </li>
@@ -43,6 +43,9 @@
             </li>
             <li class = "nav-item">
               <a class="nav-link active" aria-current="page" href="bootstrapdemo.html">Bootstrap Demo</a>
+            </li>
+            <li class = "nav-item">
+              <a href="mediaQueryDemo.html">Media Query Demo</a>
             </li>
           </ul>
       
