--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
   
-        <ul class = "nav nav-pills nav-fill">
+        <ul class = "nav nav-pills nav-fill primaryNav">
           <li class = "nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
@@ -40,6 +41,9 @@
           </li>
           <li class = "nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+          </li>
+          <li class = "nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
           </li>
         </ul>
       
