--- a/tabledemo1.html
+++ b/tabledemo1.html
@@ -7,6 +7,7 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"         
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"         
     crossorigin="anonymous">
+    <link rel = "stylesheet" href = "navStyle.css">
   </head>
     <body>
       <center>
@@ -26,7 +27,7 @@
               </tr>
           </table>
       </center>
-      <ul class = "nav nav-pills nav-fill">
+      <ul class = "nav nav-pills nav-fill primaryNav">
         <li class = "nav-item">
           <a href="index.html">Home</a>
         </li>
@@ -56,6 +57,9 @@
         </li>
         <li class = "nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class = "nav-item">
+          <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
